[workspace]
resolver = "2"

members = [
    "module-bindings/*",
    "packages/*",
]

[workspace.dependencies]
aligned-vec = "0.6.1"
anyhow = "1.0.65"
atomic_refcell = "0.1.13"
bytemuck = { version = "1.12", features = ["derive"] }
colored = "2"
constcat = "0.6.1"
convert_case = "0.6.0"
flatbuffers = "24.3.25"
glam = "0.29.2"
json = "0.12.4"
log = "0.4.16"
prettyplease = "0.2.29"
proc-macro2 = { version = "1.0.93", features = ["span-locations"] }
quote = "1.0.37"
rand = { version = "0.9.1", default-features = false }
rand_pcg = "0.9.0"
regex = "1.11.1"
serde = { version = "1.0.210", features = ["derive"] }
serde-big-array = "0.5.1"
serde_json = "1.0"
syn = { version = "2.0.87", features = ["full", "extra-traits", "parsing"] }
toml = "0.9.5"

# Rust module bindings.

animation-rs = { path = "module-bindings/animation-rs" }
audio-rs = { path = "module-bindings/audio-rs" }
engine = { path = "module-bindings/engine" }
physics-rs = { path = "module-bindings/physics-rs" }

# Non-module packages.

engine-derive = { path = "packages/engine-derive" }
ldtk = { path = "packages/ldtk" }
module-codegen = { path = "packages/module-codegen" }
snapshot = { path = "packages/snapshot" }
snapshot-derive = { path = "packages/snapshot-derive" }
